# SensorOpt

./: .gitignore  .gitmodules  CMakeLists.txt  CarlaInterface.py  CarlaWrapper.py  README.txt  SettingsFiles.h  TensorflowInterface.py  backupPy.py  carlaInterfacePy.py  debugVisualizer.py  defaultConfig.conf  defaultPy.py  main.cpp  main.py  mainHeader.h  perceptron.h  tensorPy.py
MNist/: DataHandling.h  MNist.cpp  MNist.h
modules/: PythonAPI.cpp  PythonAPI.h  PythonAPI.hpp  logger.cpp  logger.h  logger.hpp  savePoints.cpp  savePoints.h  settingsfile.cpp  settingsfile.h  settingsfile.hpp
modules/Lidar/: LiDAR.cpp  LiDAR.h
modules/MNist/: DataHandling.h  MNist.h
modules/logger/: logger.cpp  logger.h
modules/network/: perceptron.cpp  perceptron.h  tensornetwork.cpp  tensornetwork.h
modules/pythonAPI/: PythonAPI.cpp  PythonAPI.h
modules/savePoints/: savePoints.cpp  savePoints.h
modules/settingsFile/: settingsfile.h
python/: debugVisualizerPy.py  pointHandler.py  tensorPy.py  trainingPoints3.pts
